--- a/heptools.tex
+++ b/heptools.tex
@@ -30,16 +30,17 @@ This will help you get started.
 
 
 
-%----------------------------------------------------------------------------------------
-%	CHAPTER 1
-%----------------------------------------------------------------------------------------
+
+\chapterimage{Pictures/chapter_head_2.pdf} % Chapter heading image
+\chapter{Introduction}
+\input{intro/intro.tex}
+
+
 \chapterimage{Pictures/chapter_head_2.pdf} % Chapter heading image
 \chapter{Pythia}
-\input{Pythia/pythia.tex}
+\input{pythia/pythia.tex}
 
-%----------------------------------------------------------------------------------------
-%	CHAPTER 2
-%----------------------------------------------------------------------------------------
+
 \chapterimage{Pictures/chapter_head_2.pdf} % Chapter heading image
 \chapter{GEANT}
 \input{geant/geant.tex}
