--- a/geant/geant.tex
+++ b/geant/geant.tex
@@ -1,1 +1,12 @@
-testing testing
+\section{Introduction}
+GEANT was developed by Rene Brun of CERN in the 1974 as well (it was a good time for programming).
+
+
+\section{Learning Projects}
+
+
+\section{Readings}
+\begin{itemize}
+  \item http://geant4.web.cern.ch/geant4/UserDocumentation/UsersGuides/IntroductionToGeant4/html/index.html
+\end{itemize}
+
