--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,2 +1,30 @@
-You have learned Linux, C++, and root.  We are now going to learn
-some more sophisticated tools
+At this point in the course, you should be comfortable with
+Linux, C++, and root, and you should be beginning to understand
+why continuing to learn more about programming is essential for most
+careers in science.
+
+In this part of the course, we are going to learn two very sophsticated
+computational tools that are used extensively by the experimental
+high energy physics community, PYTHIA8 and GEANT4.
+These tools, written initially in FORTRAN but now in C++,
+were developed over
+the course of decades, and involved input from hundreds of
+physicists (albeit often with one lead author).  
+
+PYTHIA8 is used almost exclusively by high energy physicists.
+GEANT4, however, has wide applications, in high energy physics,
+cosmology,
+particle astrophysics, health physics, plasma physics, and medical physics.
+Both, however, will serve to introduce you to the type of
+large code systems used in many fields of physics and engineering.
+
+Of course, during this semester, we will only be able to touch
+on the wide range of options and applications of these programs.
+To really know them well, most people need a few years of constant
+use.
+
+The web sites for these programs can be found at
+\begin{itemize}
+\item GEANT 4: http://geant4.cern.ch/
+\item PYTHIA 8:  http://home.thep.lu.se/~torbjorn/Pythia.html  and   
+\end{itemize}
