--- a/pythia/pythia.tex
+++ b/pythia/pythia.tex
@@ -1,1 +1,11 @@
-test test
+\section{Introduction}
+PYTHIA was developed by Torbjorn Sjostrand, a professor of the University of Lund, in Sweden, in the 1978.
+
+
+\section{Learning Projects}
+
+
+\section{Readings}
+\begin{itemize}
+  \item A brief introduction to PYTHIA 8.1 http://arxiv.org/abs/0710.3820
+\end{itemize}
