--- a/geant/geant.tex
+++ b/geant/geant.tex
@@ -7,6 +7,7 @@ GEANT was developed by Rene Brun of CERN in the 1974 as well (it was a good time
 
 \section{Readings}
 \begin{itemize}
-  \item http://geant4.web.cern.ch/geant4/UserDocumentation/UsersGuides/IntroductionToGeant4/html/index.html
+\item http://geant4.web.cern.ch/geant4/UserDocumentation/UsersGuides/IntroductionToGeant4/html/index.html
+  \item for the historian in you: https://cds.cern.ch/record/118715/files/CM-P00059731.pdf
 \end{itemize}
 
