--- a/heptools.tex
+++ b/heptools.tex
@@ -46,6 +46,12 @@ This will help you get started.
 \input{geant/geant.tex}
 
 
+
+\chapterimage{Pictures/chapter_head_2.pdf} % Chapter heading image
+\chapter{CMSSW}
+\input{cmssw/cmssw.tex}
+
+
 \end{document}
 
 
