--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,15 +1,20 @@
 At this point in the course, you should be comfortable with
 Linux, C++, and root, and you should be beginning to understand
 why continuing to learn more about programming is essential for most
-careers in science.
+careers in science in the ${21^{st}}$ century.
 
 In this part of the course, we are going to learn two very sophsticated
 computational tools that are used extensively by the experimental
 high energy physics community, PYTHIA8 and GEANT4.
-These tools, written initially in FORTRAN but now in C++,
+These tools, written initially in FORTRAN, but now in C++,
 were developed over
 the course of decades, and involved input from hundreds of
 physicists (albeit often with one lead author).  
+If we have time, we will also look at CMSSW, the large suite of
+codes written by the CMS collaboration to take the binary data
+read from the many millions of electronics channels of the CMS 
+detector and turn them into a form useful for doing studies
+of forces and particles.
 
 PYTHIA8 is used almost exclusively by high energy physicists.
 GEANT4, however, has wide applications, in high energy physics,
@@ -21,10 +26,17 @@ large code systems used in many fields of physics and engineering.
 Of course, during this semester, we will only be able to touch
 on the wide range of options and applications of these programs.
 To really know them well, most people need a few years of constant
-use.
+use.  Our goal here is learn how to approach a new large code system,
+and to feel comfortable learning new code systems quickly.
+Also, there is a big difference between these codes and 
+large code systems you may be familiar with, such as Microsoft Office
+or the Abobe suite of codes: you may look at the source code.  Physicists need to know {\it exactly} what their code is doing: they can not just guess what it is doing or hope it is doing what they want.  We hope you will learn
+the importance of this, and how to look into the code itself when
+necessary.
 
 The web sites for these programs can be found at
 \begin{itemize}
 \item GEANT 4: http://geant4.cern.ch/
 \item PYTHIA 8:  http://home.thep.lu.se/~torbjorn/Pythia.html  and   
+\item CMSSW: https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBook
 \end{itemize}
