start text on geant project

--- a/geant/geant.tex
+++ b/geant/geant.tex
@@ -3,6 +3,18 @@ GEANT was developed by Rene Brun of CERN in the 1974 as well (it was a good time
 
 
 \section{Learning Projects}
+Your goal in this section will be to design a calorimeter for a fixed target experiment that has a resolution for jets that is better than
+$$
+{\sigma \over E} = {0.8 \over \sqrt{E}}
+$$
+a resolution for electrons of better than
+$$
+{\sigma \over E} = {0.13 \over \sqrt{E}}
+$$
+and is as cheap as possible.  You should use materials (with prices)
+from Table 
+
+
 
 
 \section{Readings}
