--- a/geant/geant.tex
+++ b/geant/geant.tex
@@ -12,10 +12,31 @@ $$
 {\sigma \over E} = {0.13 \over \sqrt{E}}
 $$
 and is as cheap as possible.  You should use materials (with prices)
-from Table 
+from Table~\ref{tab:materialsGEANT}. 
 
 
 
+\begin{table}[thb]
+\centering
+\caption{
+Materials for your GEANT calorimeter project
+}
+\label{tab:materialsGEANT}
+{\small
+\begin{tabular}{|l| l|}
+\hline
+Material  &  cost \\
+\hline
+\hline
+Lead & \$XX per kg \\
+Iron & \$XX per kg \\ \hline
+\hline
+\end{tabular}
+}
+\end{table}
+
+
+We will do this in several steps, building to the final design.
 
 \section{Readings}
 \begin{itemize}
